feat: Reviews, preview links & new styles
Styles
- Modified existing css styles
- Added new css styles

New Features
- Added a star based review display when available
- Added a link to preview book, when preview URL available

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,200');
 html {
   box-sizing: border-box;
 }
@@ -7,5 +8,5 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+   font-family: 'Source Sans Pro', sans-serif;
 }
