--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,33 @@
+
 html, body, .root {
   height: 100%;
+
 }
 body {
   line-height: 1.5;
+
 }
 body, .app {
-  background: white;
+  background: #f1f4f6;
+  /*background: linear-gradient(168deg, transparent 80%, #F3F4F5 80%, white 100%),linear-gradient(to bottom, #F3F4F5 160px, white 50%), white;*/
 }
 
 /* main page */
 
 .list-books-title {
   padding: 10px 0;
-  background: #2e7c31;
+background-image: linear-gradient( 135deg, #ABDCFF 0%, #0396FF 100%);
   text-align: center;
 }
 .list-books-title h1 {
-  font-weight: 400;
+  font-weight: 600;
+  letter-spacing: 0.1em;
   margin: 0;
   color: white;
 }
-
+.list-books-title h1 >span.thin-font {
+  font-weight: 200;
+}
 .list-books-content {
   padding: 0 0 80px;
   flex: 1;
@@ -47,13 +54,14 @@ body, .app {
   position: fixed;
   right: 25px;
   bottom: 25px;
+  z-index:100;
 }
 .open-search a {
   display: block;
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #2e7d32;
+  background: #0396FF;
   background-image: url('./icons/add.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -115,39 +123,88 @@ body, .app {
   flex-wrap: wrap;
 }
 .books-grid li {
-  padding: 10px 15px;
+  padding: 10px 40px;
   text-align: left;
 }
+@media screen and (max-width:768px){
+  .books-grid li {
+     padding: 20px;
+   }
+}
 
+@media screen and (max-width:425px){
+  .books-grid li {
+     padding: 10px;
+   }
+}
 .book {
-  width: 140px;
+  width: 400px;
+  position: relative;
+  display:flex;
+}
+
+@media screen and (max-width:768px){
+  .book{
+     width:350px;
+   }
+}
+
+@media screen and (max-width:425px){
+  .book{
+     width:300px;
+   }
 }
 .book-title,
 .book-authors {
   font-size: 0.8em;
 }
-.book-title {
-  margin-top: 10px;
+.book-title, .book-title a {
+  margin-top: 5px;
+  font-size: 1.125em;
+  font-weight: 600;
+  color:#121e28;
+  border-bottom:2px solid transparent;
+  text-decoration:none;
+}
+.book-title a:hover{
+  border-bottom-color:#121e28;
 }
 .book-authors {
   color: #999;
+  font-size:0.75em;
 }
-
-.book-top {
-  position: relative;
+.book-authors::before {
+  content:'by ';
+}
+.book-left {
   height: 200px;
-  display: flex;
+  display: inline-flex;
   align-items: flex-end;
+  padding-bottom: 10px;
+  z-index:10;
+}
+.book-info{
+  display: flow-root;
+  padding-left: 150px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-left: -140px;
+  background:white;
+  border-radius:10px;
+  z-index:1;
+  width:100%;
+  margin-top: 50px;
 }
 
 .book-shelf-changer {
   position: absolute;
-  right: 0;
-  bottom: -10px;
+  right: 5px;
+  bottom: -5px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #60ac5d;
+  background: #016dad;
   background-image: url('./icons/arrow-drop-down.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -161,6 +218,39 @@ body, .app {
   cursor: pointer;
 }
 
+
+/*Book rating*/
+.book-rating{
+  unicode-bidi: bidi-override;
+  direction: ltr;
+}
+.book-rating .numeric-rating{
+  font-color:#999;
+  font-size:0.75em;
+}
+.book-rating  span.star {
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  display: inline-block;
+  font-size: 1.3em;
+}
+.book-rating  span.star::before{
+  content: "\f006";
+  padding-right: 5px;
+  color: #777;
+}
+.select-5stars > .star:nth-child(-n+5):before,
+.select-4stars > .star:nth-child(-n+4):before,
+.select-3stars > .star:nth-child(-n+3):before,
+.select-2stars > .star:nth-child(-n+2):before,
+.select-1stars > .star:nth-child(-n+1):before{
+   color: #e3cf7a;
+   content: "\f005";
+}
+
+
+
 /* book cover */
 
 .book-cover {
@@ -172,4 +262,5 @@ body, .app {
   padding: 20px 10px 0;
   text-align: center;
   font-size: 0.8em;
+
 }
